--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,18 +7,18 @@
 
 
 body {
-  font-family: system-ui;
+  font-family: 'Inconsolata', system-ui;
   color: black;
 }
 
 .navbar-brand{
-  font-family: system-ui;
+  font-family: 'Inconsolata', system-ui;
   color: black;
   font-weight: bold;
 }
 
 main p {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inconsolata', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: black;
 }
 
@@ -27,7 +27,7 @@ main p {
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inconsolata', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
 }
 
