--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,18 +7,17 @@
 
 
 body {
-  font-family: 'Inconsolata', system-ui;
+  font-family:  system-ui;
   color: black;
 }
 
 .navbar-brand{
-  font-family: 'Inconsolata', system-ui;
+  font-family: monospace;
   color: black;
-  font-weight: bold;
 }
 
 main p {
-  font-family: 'Inconsolata', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: black;
 }
 
@@ -27,10 +26,9 @@ main p {
 }
 
 body {
-  font-family: 'Inconsolata', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
+  font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-p {
-  font-size: 16px;
-}
+/* p {
+  font-size: 23px;
+} */
